# zero2prod_axum

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  settings.json
.sqlx/: query-23651e0ecb1ee330591e28fbcd5cda6bf32dc14bac67e13a4eb960c8c6357611.json  query-3fb1ebdf1352b9dd788af297e8ec2a472552c94540d5791e0ff18a4c544b2907.json  query-5d09750e618d0e0ea3a650718cdd8880d9f016cb9681159a7475ee8ff0e55c95.json  query-829555ccf8877b594f4b0691e42315405521c985dfd196902df2ccc74e2aeb49.json  query-96286276fa32245eb1a46a59d69cb29f1642774d4154cfce5645bcd33c8fcf75.json  query-b99c87b0550f4a0a65475c7dd43ebc85ea34cdf21cad5eb36a68566fff01b865.json  query-ff043a701dbda79ebb0cd7bc9a8efeaad83948eda24efa0ef6d361eb5e7827fd.json
migrations/: 20240718135045_create_susscriptions_table.sql  20240722232344_make_status_not_null_in_subscriptions.sql  20240722233037_create_subscription_tokens_table.sql  20240729122431_create_users_table.sql  20240729171550_rename_password_column.sql  20240730040312_add_salt_to_users.sql  20240802151029_seed_user.sql  20240805152118_create_idempotency_table.sql  20240807083558_relax_null_checks_on_idempotency.sql  20240808133757_create_newsletter_issue_table.sql  20240808155137_create_issue_delivery_queue_table.sql
phc_generator/: go.mod  phc_generator.go
scripts/: docker-compose.sh  init_db.sh
settings/: base.json  local.json  production.json
src/: authentication.rs  domain.rs  email_client.rs  error.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  settings.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/database/: base.rs  basic.rs  mod.rs  postgres_pool.rs  postgres_query.rs  postgres_transaction.rs  query.rs  types.rs
src/database/postgres/: mod.rs  postgres_pool.rs  postgres_transaction.rs  postgrespool.rs  query.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/email_client/: base.rs  mod.rs  postmark.rs
src/idempotency/: key.rs  mod.rs
src/layers/: log.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  root.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.html  dashboard.rs  logout.rs
src/routes/admin/newsletters/: error.rs  get.rs  mod.rs  newsletters.html  post.rs
src/routes/admin/password/: get.rs  password.html  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login.html  login_failed.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  admin_newsletters.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
tests/api/helpers/: database.rs  test_app.rs
