[package]
name = "zero2prod_axum"
version = "0.1.0"
edition = "2021"
authors = ["aquatic"]
description = "'제로부터 시작하는 러스트 백엔드 프로그래밍' 연습용 프로젝트. actix-web 대신 axum을 사용했다."

[lib]
# 어떤 형태의 경로든 기술할 수 있지만 커뮤니티의 관습을 따른다.
# `name` 필드를 사용해서 라이브러리 이름을 지정한다.
# 지정하지 않으면 cargo는 `package.name`을 사용한다.
path = "src/lib.rs"

# 이중 대괄호는 TOML에서의 배열 표기 문법이다.
# 프로젝트에 하나의 라이브러리는 물론 여러 바이너리를 포함할 수도 있다.
[[bin]]
path = "src/main.rs"
name = "zero2prod_axum"

[dependencies]
axum = { version = "0.7", features = ["http2"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# 옵셔널 `derive` 피처를 사용해야 `serde`의 절차적 매크로인 `#[derive(serde::Deserialize)]`를 사용할 수 있다.
# 이 피처는 기본으로 활성화되어 있지 않다.
# 프로젝트에 불필요한 의존성을 사용하지 않기 위해서다.
serde = { version = "1", features = ["derive"] }

# `dev-dependencies`는 테스트나 예시를 실행할 때만 사용된다.
# 최종 애플리케이션 바이너리에는 포함되지 않는다.
[dev-dependencies]
reqwest = "0.12"
